<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".RegistrationPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/register_page_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/logo"/>

            <com.google.android.material.textview.MaterialTextView
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/forest_app_bar_name"
                android:layout_toRightOf="@id/register_page_logo"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/registerPage_name"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/register_phone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerPhone_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/phone_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/register_phone_text_view"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:text="1234567890"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>

        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/registerUserName_name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_first_name"
            style="@style/Widget.Vanrakshak.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstNameEditText_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_last_name"
            style="@style/Widget.Vanrakshak.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/lastNameEditText_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/registerUserAddress_name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_address"
            style="@style/Widget.Vanrakshak.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addressEditText_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:lines="5"
                android:maxLines="10"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_page_submit"
                style="@style/Widget.Vanrakshak.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/submitButton_name"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>