<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppbar"
                style="@style/Widget.Vanrakshak.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_menu_24px"
                app:logo="@drawable/logo_removebg_preview"
                app:title="@string/forest_app_bar_name" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/person_logo"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:background="@drawable/profile_layout">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/profile_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registerUserName_name"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@id/profile_name"
                        android:text="Pratik Naik"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="10dp"
                    android:background="@drawable/profile_layout">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_registered_phone_number"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userPhoneNumber_name"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_phone_number"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_centerVertical="true"
                        android:text="+91-123-456-7890"
                        android:layout_toRightOf="@id/user_registered_phone_number"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="10dp"
                    android:background="@drawable/profile_layout">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/profile_address"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registerUserAddress_name"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_address"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@id/profile_address"
                        android:text="Kalwa"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="10dp"
                    android:background="@drawable/profile_layout">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_reports_submitted"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userReports_name"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_reports"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@id/user_reports_submitted"
                        android:text="0"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="10dp"
                    android:background="@drawable/profile_layout">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_alerts_sent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userAlerts_name"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user_sos_alerts"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@id/user_alerts_sent"
                        android:text="0"/>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemIconSize="40dp"
        app:itemIconPadding="30dp"
        app:itemIconTint="@color/textColorPrimary"
        app:itemHorizontalPadding="30dp"
        app:itemTextColor="@color/textColorPrimary"
        app:itemTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:headerLayout="@layout/header_navigation_drawer"
        app:menu="@menu/navigation_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>