<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".RegisterOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            android:backgroundTint="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/forest_app_bar_name"
            android:textAppearance="@style/TextAppearance.Vanrakshak.Title"/>

        <TextView
            android:id = "@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/registerButton_name"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <ProgressBar
            android:id="@+id/register_otp_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/register_otp_progress_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="VERIFYING OTP"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerOtpInstruction"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>

        <LinearLayout
            android:id="@+id/root_otp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <EditText
                android:id="@+id/otp_edit_box1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="30sp"
                android:textColor="@color/textColorPrimary"
                android:background="@drawable/edit_text_curve_bg"/>

            <EditText
                android:id="@+id/otp_edit_box2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textColorPrimary"
                android:background="@drawable/edit_text_curve_bg"/>

            <EditText
                android:id="@+id/otp_edit_box3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textColorPrimary"
                android:background="@drawable/edit_text_curve_bg"/>

            <EditText
                android:id="@+id/otp_edit_box4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textColorPrimary"
                android:background="@drawable/edit_text_curve_bg" />

            <EditText
                android:id="@+id/otp_edit_box5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textColorPrimary"
                android:background="@drawable/edit_text_curve_bg" />

            <EditText
                android:id="@+id/otp_edit_box6"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textColorPrimary"
                android:background="@drawable/edit_text_curve_bg" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/phone_otp_submit"
                style="@style/Widget.Vanrakshak.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/submitButton_name"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>